# Lori-s-project

./: .dockerignore  .env.example  .env.test  .gitignore  AGENT.md  AGENTS.md  PROMPT-implement.md  README.md  docker-compose.yml  drizzle.config.ts  next.config.ts  package-lock.json  package.json  results.tsv  start-backend.sh  start-frontend.sh  start.sh  vitest.config.ts
.github/: pull_request_template.md
backend/: .dockerignore  implementation.py  pyproject.toml  requirements.txt  seed_admin.py  seed_data.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py
backend/app/routers/: attendance.py  auth.py  bulletin.py  cast_assignments.py  cast_profile.py  chat.py  conflicts.py  invite.py  join.py  members.py  productions.py  scenes.py  schedule.py  teams.py  theaters.py
backend/app/services/: __init__.py  audit.py  business_logic.py  email.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_cast_flow.py  test_director_flow.py  test_staff_flow.py
backend/tests/unit/: test_api_errors.py  test_auth_login.py  test_auth_password_reset.py  test_auth_registration.py  test_bulletin_board.py  test_cast_profile.py  test_chat.py  test_conflicts.py  test_infrastructure.py  test_invite_links.py  test_productions.py  test_rbac.py  test_schedule_generator.py  test_schedule_manipulation.py  test_security.py  test_theaters.py  test_websocket_chat.py
drizzle/: 0001_triggers.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
spec/: README.md  SPEC-001-product-overview.md  (+8 more)
(+220 files in other folders)
